--- a/styles.css
+++ b/styles.css
@@ -10,16 +10,15 @@ body {
 h1 {
   text-align: center;
   margin: 6vh;
+  text-transform: uppercase;
 }
 
 .customers {
   width: 90vw;
   margin: 0 auto;
-  /*height: 100vh;
-  background: #000;*/
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 4vh 2vw;
+  grid-gap: 4vh 1vw;
 }
 
 .customer {
@@ -30,19 +29,21 @@ h1 {
 }
 
 .customer img {
-  width: 20vw;
-  height: 20vw;
+  width: 21vw;
+  height: 21vw;
 }
 
 .customer h4 {
   box-shadow: 0px 4px 1px -2px #86C7A4;
   margin: 2.5vh auto;
+  text-transform: uppercase;
 }
 
 .customer h5 {
   margin: 1vh;
   color: #DFDFDF;
   font-size: .75em;
+  text-transform: uppercase;
 }
 
 .customer pre {
@@ -51,4 +52,5 @@ h1 {
   line-height: 1.5em;
   font-size: .75em;
   text-align: center;
+  text-transform: capitalize;
 }
